<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_margin="10dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guide_line"
       android:layout_width="1dp"
       android:layout_height="match_parent"
       android:orientation="vertical"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintGuide_percent="0.6"
       />

    <TextView
        android:id="@+id/estimate_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/estimated_time"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@+id/real_time_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/real_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/real_time"
        app:layout_constraintLeft_toRightOf="@+id/estimate_time_title"
        app:layout_constraintRight_toLeftOf="@+id/guide_line"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/estimate_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="HH:mm"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@+id/real_time_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimate_time_title" />

    <TextView
        android:id="@+id/real_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="HH:mm"
        app:layout_constraintLeft_toRightOf="@+id/estimate_time_title"
        app:layout_constraintRight_toLeftOf="@+id/guide_line"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/estimate_time_title" />


    <TextView
        android:id="@+id/flight_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/flight_num"
        app:layout_constraintStart_toStartOf="@id/estimate_time_title"
        app:layout_constraintEnd_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/real_time"
        />

    <TextView
        android:id="@+id/terminal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terminal_gate"
        app:layout_constraintStart_toStartOf="@+id/estimate_time_title"
        app:layout_constraintEnd_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/flight_number"
        />

    <TextView
        android:id="@+id/remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="出發DEPARTED"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="@id/estimate_time_title"
        app:layout_constraintEnd_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/terminal"
        />

    <TextView
        android:id="@+id/flight_position_des"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/flight_des"
        app:layout_constraintStart_toEndOf="@+id/guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/remark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>